--- a/Python Programming - Lab - 6.ipynb
+++ b/Python Programming - Lab - 6.ipynb
@@ -114,9 +114,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 1), (2, 8), (3, 27), (4, 64), (5, 125)]\n"
+     ]
+    }
+   ],
    "source": [
     "numbers = [1, 2, 3, 4, 5]\n",
     "result = [(num, num**3) for num in numbers]\n",
@@ -132,10 +140,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(2, 3)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "tuple_list=[(1,-2),(2,3),(-4,-5)]\n",
+    "result=[tup for tup in tuple_list if all(i>0 for i in tup)]\n",
+    "print(result)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -146,10 +166,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 2), (2, 3), (4, 5)]\n",
+      "((4, 5), (6, 8))\n"
+     ]
+    }
+   ],
+   "source": [
+    "l1=[(1,2),(2,3)]\n",
+    "t1=(4,5)\n",
+    "l1.append(t1)\n",
+    "print(l1)\n",
+    "\n",
+    "t2=((4,5),(6,8))\n",
+    "l2=[(2,3,4),(4,5)]\n",
+    "list(t2).append(l2)\n",
+    "print(t2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -160,10 +199,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(4, 5, 6, 7), (11, 12)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "k=3\n",
+    "list_tuple=[(1,2,3),(4,5,6,7),(8,9,10),(11,12)]\n",
+    "list_tuple=[tup for tup in list_tuple if len(tup)!=k]\n",
+    "print(list_tuple)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -174,10 +226,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4, 5, 6}\n"
+     ]
+    }
+   ],
+   "source": [
+    "tuples=(1,2,2,3,3,3,3,4,4,5,6)\n",
+    "tuples2=set(tuples)\n",
+    "print(tuples2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -188,16 +252,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6, 12, 20)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tuple1=(2,3,4,5)\n",
+    "result = [tuple1[i]*tuple1[i+1] for i in range(0,len(tuple1)-1)]\n",
+    "# for i in range(len(tuple1) - 1):\n",
+    "#     result.append(tuple1[i] * tuple1[i + 1])\n",
+    "tuple(result)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### 10) WAP to test if the given tuple is distinct or not."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{(2, 3), (4, 5), (6, 7)}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list_tuples=[(2,3),(2,3),(4,5),(6,7),(6,7)]\n",
+    "list_tuples=set(list_tuples)\n",
+    "list_tuples"
    ]
   },
   {
